# python-bitchat-client

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml  security.yml
examples/: terminal_harness.py
src/python_bitchat_client/: __init__.py  client.py  dedupe.py  keys.py  logging_utils.py  models.py  noise_protocol.py  noise_session.py  protocol.py
src/python_bitchat_client/_vendor/: VENDORED.md
src/python_bitchat_client/_vendor/bitchat_protocol/: codec.py  errors.py  tlv.py  types.py
src/python_bitchat_client/_vendor/bitchat_protocol/tests/: __init__.py  test_codec.py  test_fixtures.py  test_fuzz.py  test_tlv.py
tests/: test_dependency_policy.py  test_keys.py  test_python_bitchat_client_client.py  test_python_bitchat_client_noise.py  test_python_bitchat_client_protocol.py
